# polynomials

./: CMakeLists.txt  Doxyfile.in  MainPage.dox  README.md  chain_poly.sh
src/: calc_poly.c  parser.c  parser.h  poly.c  poly.h  polystack.c  polystack.h  test_poly.c  unit_tests_poly.c  utils.h  vector.c  vector.h
